# Digit-Classification

./: .gitignore
C++/: CMakeLists.txt  DIGIT_CLASSIFIER
C++/CUDA/include/: dataset.hpp  neuron.cpp
C++/CUDA/src/: main.cpp
C++/OpenMP/: DIGIT_CLASSIFIER
C++/OpenMP/include/: CMakeLists.txt
C++/OpenMP/src/: main.cpp
C++/include/: CMakeLists.txt  datapack.cpp  datapack.h  layers.cpp  layers.h  neuron.cpp  neuron.h
C++/src/: main.cpp
Python/: layers.py  main.py
